# Project_OOP

./: README.md  config.py  main.py  pyproject.toml
data/: data_test.json  result.json  vacancies.json
htmlcov/: index.html
src/: abstract_classes.py  utils.py  vacancy.py  vacancy_api.py  vacancy_json.py
tests/: conftest.py  create_json_for test.py  test_vacancy.py  test_vacancy_json.py
